syntax = "proto3";
package scheme_types;

enum ThresholdScheme {
    Bz03 = 0;
    Sg02 = 1;
    Bls04 = 2;
    Cks05 = 3;
    Frost = 4;
    Sh00 = 5;
}

enum Group {
    Bls12381 = 0;
    Bn254 = 1;
    Ed25519 = 2;
    Rsa = 3;
}
